# matlab-mex-cmake

./: .gitignore  CMakeLists.txt  README.md  mex_link.sh  mex_main.h  mex_stub.c  mex_stub.cpp  timesfour.cpp  timestwo.c
